--- a/Homework 08 - Campaign Response Model/Campaign Response Model.ipynb
+++ b/Homework 08 - Campaign Response Model/Campaign Response Model.ipynb
@@ -13,7 +13,8 @@
         "MKLeuoi5c_t2",
         "QIxuTrNCita2",
         "BqiXugl6jIuz"
-      ]
+      ],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
